navbar alignment fixed

--- a/css/style.css
+++ b/css/style.css
@@ -55,6 +55,63 @@ body {
   height: 7rem;
   margin-left: 10rem;
   margin-right: 10rem;
+  /*
+    .searchbox_container {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+
+        .header_searchbox {
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            height: 40px;
+            background-color: transparent;
+            border-radius: 40px;
+            padding: 10px;
+            color: @matte-black;
+
+            ::placeholder {
+                color: @matte-black;
+            }
+
+            &:hover>.search_text {
+                width: 240px;
+                padding: 0 6px;
+            }
+
+
+
+            .search_text {
+                border: none;
+                background: none;
+                outline: none;
+                padding: 0;
+                color: @matte-black;
+                font-size: 16px;
+                transition: 0.4s;
+                line-height: 40px;
+                width: 0px;
+
+
+                &:focus {}
+            }
+
+            .search-btn {
+                display: flex;
+                justify-content: center;
+                align-items: center;
+                text-decoration: none;
+                color: @matte-black;
+                font-size: 1rem;
+                height: 2rem;
+                width: 2rem;
+                border-radius: 40px;
+            }
+        }
+    }
+
+    */
 }
 .header .logo h1 {
   color: #d95964;
@@ -107,50 +164,6 @@ body {
     opacity: 1;
   }
 }
-.header .searchbox_container {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-}
-.header .searchbox_container .header_searchbox {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  height: 40px;
-  background-color: transparent;
-  border-radius: 40px;
-  padding: 10px;
-  color: #252223;
-}
-.header .searchbox_container .header_searchbox ::placeholder {
-  color: #252223;
-}
-.header .searchbox_container .header_searchbox:hover > .search_text {
-  width: 240px;
-  padding: 0 6px;
-}
-.header .searchbox_container .header_searchbox .search_text {
-  border: none;
-  background: none;
-  outline: none;
-  padding: 0;
-  color: #252223;
-  font-size: 16px;
-  transition: 0.4s;
-  line-height: 40px;
-  width: 0px;
-}
-.header .searchbox_container .header_searchbox .search-btn {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  text-decoration: none;
-  color: #252223;
-  font-size: 1rem;
-  height: 2rem;
-  width: 2rem;
-  border-radius: 40px;
-}
 .header .navbar {
   display: flex;
   height: 100%;
@@ -171,6 +184,7 @@ body {
 .header .navbar .navul .nav_item a {
   color: #252223;
   display: flex;
+  justify-content: center;
   align-items: center;
   text-decoration: none;
   text-transform: uppercase;
