--- a/less/nav.less
+++ b/less/nav.less
@@ -30,6 +30,7 @@
     }
 
     // searchbox 
+    /*
     .searchbox_container {
         display: flex;
         justify-content: center;
@@ -85,6 +86,8 @@
         }
     }
 
+    */
+
     .navbar {
         display: flex;
         height: 100%;
@@ -105,6 +108,7 @@
                 list-style: none;
                 font-weight: 600;
                 letter-spacing: 1px;
+               
              
 
 
@@ -112,6 +116,7 @@
                     // links
                     color: @matte-black;
                     display: flex;
+                    justify-content: center;
                     align-items: center;
                     text-decoration: none;
                     text-transform: uppercase;
